[gd_scene load_steps=5 format=3 uid="uid://d0gajw3vx7h1x"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_gsi51"]
[ext_resource type="PackedScene" uid="uid://codj0bbh20iif" path="res://rooms/stage.tscn" id="2_1bbrx"]
[ext_resource type="PackedScene" uid="uid://v62au7xsjgwb" path="res://rooms/menu.tscn" id="3_dk1nj"]
[ext_resource type="PackedScene" uid="uid://dqsqithg041vj" path="res://rooms/trans_screen.tscn" id="4_1s72x"]

[node name="Main" type="Node"]
script = ExtResource("1_gsi51")
stage_1 = ExtResource("2_1bbrx")
menu = ExtResource("3_dk1nj")

[node name="CurrentScene" type="Node" parent="."]

[node name="TransitionScreen" parent="." instance=ExtResource("4_1s72x")]

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_transition_screen_transitioned"]
